--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,29 +1,90 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
 }
 
 .header {
+  width: 100%;
   height: 72px;
+  display: inline-flex;
+  align-items: center;
+  padding-left: 16px;
+
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
 }
 
 .footer {
   height: 72px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   background: #eee;
   color: darkmagenta;
+  text-align: center;
+}
+
+.main {
+  width: 100%;
+  min-height: 80dvh;
+  display: flex;
+  flex: 1;
 }
 
 .sidebar {
   width: 300px;
+  min-height: 100%;
+  flex-shrink: 0;
+  padding: 16px;
+
   background: royalblue;
-  box-sizing: border-box;
+}
+
+.sidebar ul {
+  list-style: none;
+}
+
+.sidebar li {
+  margin-bottom: 9px;
+}
+
+.sidebar a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 24px;
+}
+
+.container {
+  min-height: 80dvh;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 48px;
 }
 
 .card {
+  background: #fff;
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+  width: 340px;
+  height: 300px;
+  padding: 12px;
 }
